scroll x overflow fixed product image height and video done

--- a/app/embla.css
+++ b/app/embla.css
@@ -11,7 +11,7 @@
 .embla__container {
   display: flex;
   gap: var(--slide-spacing);
-  margin-left: calc(var(--slide-spacing) * -1);
+  margin-left: calc(var(--slide-spacing) * 0.1);
 }
 
 .embla__slide {
